--- a/index.html
+++ b/index.html
@@ -27,14 +27,6 @@
         <script src="cambiarIdioma.js"></script>
         <script src="sliderFotos.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script type="text/typescript" src="script.ts"></script>
-        <script type="text/typescript">
-            const video = document.getElementById('main-video') as HTMLVideoElement;
-            video.addEventListener('ended', () => {
-            video.currentTime = 0.3;
-            video.play();
-            });
-        </script>
         <script>
             function idioma(){
                 location.href="./indexEn.html"
@@ -48,9 +40,15 @@
         </script>
 
         
-        <div class="video-wrapper">
-            <video autoplay muted id="main-video">
+        <div class="video-wrapper" id="videoClaro">
+            <video autoplay muted loop id="main-video">
                 <source src="videoPortfolio.mp4" type="video/mp4"></source>
+             </video>
+        </div>
+
+        <div class="video-wrapper" id="videoOscuro">
+            <video autoplay muted loop id="main-video">
+                <source src="videoPortfolioOscuro.mp4" type="video/mp4"></source>
              </video>
         </div>
 
@@ -420,9 +418,6 @@
             </div>
         </footer>
 
-        <div class="cursor"></div>
-        <script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
-        <script src="https://rawgit.com/basarat/typescript-script/master/transpiler.js"></script>
         
     </body>
 
